--- a/tox.ini
+++ b/tox.ini
@@ -3,7 +3,7 @@
 # by letting tox manage the environment.
 [tox]
 min_version = 4.0
-env_list = py313, pytest
+env_list = py313, pytest, format
 
 # ---
 # This is the base configuration for all test environments.
@@ -47,3 +47,8 @@ deps =
     pylint
 commands =
     pylint --rc-file=.pylintrc
+
+[testenv:format]
+description = format with black
+    commands =
+        black intervals --check --diff
