--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -25,8 +25,10 @@ jobs:
         python-version: "3.13"
     - name: Install dependencies
       run: |
-        pip install tox
-        poetry install
+        # pip install tox
+        # poetry install
+        python -m pip install --upgrade pip
+        pip install tox tox-gh-actions
     - name: Pylint checks
       run: |
         tox -e pylint
