--- a/tox.ini
+++ b/tox.ini
@@ -3,7 +3,7 @@
 # by letting tox manage the environment.
 [tox]
 min_version = 4.0
-env_list = py313, pytest, format
+env_list = py313, pytest, lint, format
 
 # ---
 # This is the base configuration for all test environments.
@@ -46,7 +46,7 @@ description = run linter
 deps =
     pylint
 commands =
-    pylint --rc-file=.pylintrc
+    pylint --rc-file=.pylintrc intervals
 
 [testenv:format]
 description = format with black
