--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -31,7 +31,7 @@ jobs:
         pip install tox tox-gh-actions
     - name: Pylint checks
       run: |
-        tox -e pylint
+        tox -e lint
     - name: Formatting checks
       run: |
         tox -e format
