--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,5 +19,5 @@ SQLAlchemy = "^2.0"
 pylint = "3.3.7"
 
 #[build-system]
-#requires = ["poetry-core"]
+#requires = ["poetry-core>=1.0.0"]
 #build-backend = "poetry.core.masonry.api"
