--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -16,28 +16,31 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python: ["3.13", "3.14"]
 
     steps:
     - uses: actions/checkout@v4
     - name: Set up Python 3.13
       uses: actions/setup-python@v3
       with:
-        python-version: "3.13"
+        python-version: ${{ matrix.python }}$
     - name: Install dependencies
       run: |
-        # pip install tox
-        # poetry install
-        python -m pip install --upgrade pip
-        pip install tox tox-gh-actions
+        pip install tox
+        poetry install
+        # python -m pip install --upgrade pip
+        # pip install tox tox-gh-actions
     - name: Pylint checks
       run: |
         tox -e lint
-    - name: Formatting checks
-      run: |
-        tox -e format
-    - name: Test with pytest
-      run: |
-        tox -e pytest
+    # - name: Formatting checks
+    #   run: |
+    #     tox -e format
+    # - name: Test with pytest
+    #   run: |
+    #     tox -e pytest
     #   run: |
     #     python -m pip install --upgrade pip
     #     pip install flake8 pytest
