--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -18,7 +18,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python: ["3.13", "3.14"]
+        python: ["3.13"]
 
     steps:
     - uses: actions/checkout@v4
