--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -29,6 +29,7 @@ jobs:
     - name: Install dependencies
       run: |
         pip install tox
+        pip install poetry
         poetry install
         # python -m pip install --upgrade pip
         # pip install tox tox-gh-actions
