--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -29,10 +29,11 @@ jobs:
     - name: Install dependencies
       run: |
         pip install tox
-        pip install poetry
+        # Install poetry dependencies only.
+        pip install poetry --no-root
         poetry install
-        # python -m pip install --upgrade pip
-        # pip install tox tox-gh-actions
+        #### python -m pip install --upgrade pip
+        #### pip install tox tox-gh-actions
     - name: Pylint checks
       run: |
         tox -e lint
