--- a/tox.ini
+++ b/tox.ini
@@ -41,6 +41,8 @@ description = run linter
 # `pylint` is installed from the base `[testenv]`.
 # The `pylint` dependency should be defined in `pyproject.toml`
 # under `[tool.poetry.group.test.dependencies]`.
+deps =
+    pylint
 commands =
     pylint --rc-file=.pylintrc intervals/
 allowlist_externals =
