--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -37,3 +37,6 @@ jobs:
     - name: Pylint checks
       run: |
         tox -e lint
+    - name: Formatting checks
+      run: |
+        tox -e format
