--- a/tox.ini
+++ b/tox.ini
@@ -54,6 +54,8 @@ description = format with black
 # `black` is installed from the base `[testenv]`.
 # The `black` dependency should be defined in `pyproject.toml`
 # under `[tool.poetry.group.test.dependencies]`.
+deps =
+    black
 commands =
     black intervals --check --diff
 allowlist_externals =
