add pytest to gh workflow

--- a/tox.ini
+++ b/tox.ini
@@ -29,6 +29,8 @@ description = Run pytests for the project
 # `pytest` is installed from the base `[testenv]` and project dependencies.
 # The `pytest` dependency should be defined in `pyproject.toml`
 # under `[tool.poetry.group.test.dependencies]`.
+deps =
+    pytest
 commands =
     pytest
 # This is the fix: we explicitly allow the `pytest` command to run.
