Create Github Action (#2)

--- a/tox.ini
+++ b/tox.ini
@@ -3,7 +3,7 @@
 # by letting tox manage the environment.
 [tox]
 min_version = 4.0
-env_list = py313, pytest, format
+env_list = py313, pytest, lint, format
 
 # ---
 # This is the base configuration for all test environments.
@@ -12,18 +12,10 @@ description = Setup tox project
 # Tox will automatically use the pyproject.toml build backend (poetry)
 # to install the package in an isolated way.
 isolated_build = True
-
-# We need to tell tox where to find our dependencies from pyproject.toml
-# Tox can read the dependencies directly.
-# The `.[test]` syntax tells tox to install the main package and the `test` extra.
-# You need to define the test dependencies in your pyproject.toml as well.
-# For example: [tool.poetry.group.test.dependencies]
-;deps =
-;    # The build system itself (poetry-core) will be handled automatically by tox.
-;    poetry
-# The command to execute after dependencies are installed.
-;commands =
-;    pytest
+# This is the key change. We tell tox to install the project itself.
+# This makes all the dependencies from pyproject.toml available to the env.
+deps =
+    -e .
 
 # ---
 # This section defines the specific environment for Python 3.13 testing.
@@ -31,24 +23,42 @@ isolated_build = True
 # Use the Python 3.13 interpreter.
 base_python = python3.13
 
-
 [testenv:pytest]
 description = Run pytests for the project
+# This environment now inherits deps from the base `[testenv]`.
+# `pytest` is installed from the base `[testenv]` and project dependencies.
+# The `pytest` dependency should be defined in `pyproject.toml`
+# under `[tool.poetry.group.test.dependencies]`.
 deps =
     pytest
-    # There should be a way to install this from pyproject.toml
-    sqlalchemy
 commands =
+    pytest
+# This is the fix: we explicitly allow the `pytest` command to run.
+allowlist_externals =
     pytest
 
 [testenv:lint]
 description = run linter
+# This environment now inherits deps from the base `[testenv]`.
+# `pylint` is installed from the base `[testenv]`.
+# The `pylint` dependency should be defined in `pyproject.toml`
+# under `[tool.poetry.group.test.dependencies]`.
 deps =
     pylint
 commands =
-    pylint --rc-file=.pylintrc
+    pylint --rc-file=.pylintrc intervals/
+allowlist_externals =
+    pylint
 
 [testenv:format]
 description = format with black
-    commands =
-        black intervals --check --diff
+# This environment now inherits deps from the base `[testenv]`.
+# `black` is installed from the base `[testenv]`.
+# The `black` dependency should be defined in `pyproject.toml`
+# under `[tool.poetry.group.test.dependencies]`.
+deps =
+    black
+commands =
+    black intervals --check --diff
+allowlist_externals =
+    black
