--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "range-query-intervals"
+name = "intervals"
 version = "0.1.0"
 description = "Tools and implementations of Range Queries"
 authors = ["Alan Ponte <alanjponte@gmail.com>"]
@@ -18,6 +18,6 @@ pytest="^8.4.1"
 SQLAlchemy = "^2.0"
 pylint = "3.3.7"
 
-#[build-system]
-#requires = ["poetry-core"]
-#build-backend = "poetry.core.masonry.api"
+[build-system]
+requires = ["poetry-core>=1.0.0"]
+build-backend = "poetry.core.masonry.api"
