--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,9 +14,10 @@ alembic = "^1.12"
 
 [tool.poetry.group.test.dependencies]
 black = "25.1.0"
+mypy = "^1.17.1"
+pylint = "3.3.7"
 pytest="^8.4.1"
 SQLAlchemy = "^2.0"
-pylint = "3.3.7"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
