--- a/tox.ini
+++ b/tox.ini
@@ -62,3 +62,11 @@ commands =
     black intervals --check --diff
 allowlist_externals =
     black
+
+[testenv:type-check]
+description = Type checking with mypy
+deps =
+    mypy
+commands = mypy intervals
+allowlist_externals =
+    mypy
