--- a/tox.ini
+++ b/tox.ini
@@ -3,7 +3,7 @@
 # by letting tox manage the environment.
 [tox]
 min_version = 4.0
-env_list = py313, pytest, lint, format
+env_list = py313, pytest, lint, format, typecheck
 
 # ---
 # This is the base configuration for all test environments.
@@ -63,7 +63,7 @@ commands =
 allowlist_externals =
     black
 
-[testenv:type-check]
+[testenv:typecheck]
 description = Type checking with mypy
 deps =
     mypy
