--- a/tox.ini
+++ b/tox.ini
@@ -3,7 +3,7 @@
 # by letting tox manage the environment.
 [tox]
 min_version = 4.0
-env_list = py313, pytest, lint, format
+env_list = py313, pytest, lint, format, typecheck
 
 # ---
 # This is the base configuration for all test environments.
@@ -62,3 +62,11 @@ commands =
     black intervals --check --diff
 allowlist_externals =
     black
+
+[testenv:typecheck]
+description = Type checking with mypy
+deps =
+    mypy
+commands = mypy intervals
+allowlist_externals =
+    mypy
