--- a/tox.ini
+++ b/tox.ini
@@ -32,7 +32,7 @@ description = Run pytests for the project
 deps =
     pytest
 commands =
-    pytest
+    pytest tests
 # This is the fix: we explicitly allow the `pytest` command to run.
 allowlist_externals =
     pytest
@@ -46,7 +46,7 @@ description = run linter
 deps =
     pylint
 commands =
-    pylint --rc-file=.pylintrc intervals/
+    pylint --rc-file=.pylintrc rqi/
 allowlist_externals =
     pylint
 
@@ -59,7 +59,7 @@ description = format with black
 deps =
     black
 commands =
-    black intervals --check --diff
+    black rqi --check --diff
 allowlist_externals =
     black
 
@@ -67,6 +67,6 @@ allowlist_externals =
 description = Type checking with mypy
 deps =
     mypy
-commands = mypy intervals
+commands = mypy rqi
 allowlist_externals =
     mypy
