--- a/tox.ini
+++ b/tox.ini
@@ -3,7 +3,7 @@
 # by letting tox manage the environment.
 [tox]
 min_version = 4.0
-env_list = py313, pytest, lint, format, typecheck
+env_list = py313, pytest, lint, format, typecheck, dist
 
 # ---
 # This is the base configuration for all test environments.
@@ -70,3 +70,11 @@ deps =
 commands = mypy rqi
 allowlist_externals =
     mypy
+
+[testenv:dist]
+description =
+    Build a distribution via poetry.
+commands =
+    poetry build
+allowlist_externals =
+    poetry
